# vm-rust

./: .gitignore  Cargo.toml  README.md  doc.org
src/: cpu.rs  instruction.rs  main.rs  memory.rs
