[package]
name = "vm-rust"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]

[dependencies]
bitflags = "1.0"
byteorder = "1"
num = "0.1"
clap = "2.31.1"
num-derive = "0.1"
num-traits = "0.2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true

[features]
debug_mem_read = []
debug_mem_write = []
debug_flag = []
debug_push = []
